--- a/style.css
+++ b/style.css
@@ -3,7 +3,8 @@ html {
   width: 100%;
   height: 100%;
   font-family: 'Roboto Mono', monospace;
-  background: url(header.jpg) no-repeat center center fixed; 
+  background-image: linear-gradient(to bottom, #191a2e, #1a1b31, #1b1c33, #1c1e36, #1d1f39);
+  /*Used https://mycolor.space/gradient3?ori=to+right+top&hex=%234DD7C2&hex2=%23972CEA&hex3=%233E139F&submit=submit to get 3 color gradient*/
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -20,17 +21,18 @@ ul {
 }
 
 .navBar {
-  background-color: rgba(143, 167, 240, 0.2);
+  margin-top: 1rem;
+  width: 100%;
   display: flex;
   justify-content: center;
   font-size: 1em;
-  color: rgb(23, 6, 58);
+  color: ghostwhite;
   gap: 3rem;
 }
 
 @media screen and (max-width: 600px) {
   .navBar {
-    font-size: 1.2em;
+    font-size: 0.8em;
     gap: 1rem;
   }
 }
@@ -40,27 +42,38 @@ ul {
   width: 2rem;
 }
 
+.navLogo:hover {
+  transform: scale(150%);
+  transition-duration: 3;
+}
+
 h1{
   margin: 0px;
   padding: 16rem;
   grid-row: 1fr;
   font-size: 3rem;
   font-family: 'Roboto Mono', monospace;
-  color: royalblue;
+  color: #FF08E2;
   text-align: center;
 }
 
 h2 {
   font-size: 1rem;
   font-family: 'Roboto Mono', monospace;
-  color: royalblue;
+  color: #2FFFAD;
   text-align: center;
 }
 
-hr {
-  margin: 20px auto;
-  color: #F05F44;
-  border: 3px solid #F05F44;
-  max-width: 65px;
-  opacity: 1;  
+ul:hover > hr {
+  height: 0.1rem;
+  background-image: linear-gradient(to right, #4dd7c2, #00c9da, #00b7f4, #009fff, #0080ff, #406af7, #634fea, #8026d7, #6f21c9, #5f1dbb, #4e18ad, #3e139f);
+  margin: 0;
+  border: none;
+}
+
+hr{
+  height: 0.1rem;
+  background-color: transparent;
+  margin: 0;
+  border: none;
 }
