--- a/style.css
+++ b/style.css
@@ -4,8 +4,9 @@ html {
   height: 100%;
   font-family: 'Roboto Mono', monospace;
   color: ghostwhite;
-  background-image: linear-gradient(to bottom, #191a2e, #1a1b31, #1b1c33, #1c1e36, #1d1f39);
-  /*Used https://mycolor.space/gradient3?ori=to+right+top&hex=%234DD7C2&hex2=%23972CEA&hex3=%233E139F&submit=submit to get 3 color gradient*/
+/*  background-image: linear-gradient(to bottom, #191a2e, #1a1b31, #1b1c33, #1c1e36, #1d1f39); 
+    Used https://mycolor.space/gradient3?ori=to+right+top&hex=%234DD7C2&hex2=%23972CEA&hex3=%233E139F&submit=submit to get 3 color gradient*/
+  background-color: #232946;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -20,11 +21,11 @@ ul {
 .navBar {
   margin-top: 1rem;
   width: 100%;
-  display: flex;
-  justify-content: flex-end;
+  display: grid;
   font-size: 1em;
   color: ghostwhite;
-  gap: 3rem;
+  grid-template-rows: repeat(1, 1fr);
+  grid-template-columns: repeat(2, 1fr);
 }
 
 @media screen and (max-width: 600px) {
@@ -35,15 +36,29 @@ ul {
 }
 
 .navLogo {
-  height: 2rem;
-  width: 2rem;
+  margin-left: 1rem;
+  height: 3rem;
+  width: 3rem;
+  justify-items: left;
 }
 
-.navLogo:hover {
-  transform: scale(200%);
+.navItems {
+  display: flex;
+  margin-right: 1rem;
+  justify-content: flex-end;
+  gap: 2rem;
 }
 
-.welcome {
+ul:hover > hr {
+  height: 0.1rem;
+  background-image: linear-gradient(to right, #4dd7c2, #00c9da, #00b7f4, #009fff, #0080ff, #406af7, #634fea, #8026d7, #6f21c9, #5f1dbb, #4e18ad, #3e139f);
+  margin: 0;
+  border: none;
+}
+a {text-decoration: none; color: ghostwhite;}
+a:visited {text-decoration: none; }
+
+.section1 {
   margin-top: 4rem;
   margin-left: auto;
   margin-right: auto;
@@ -60,9 +75,22 @@ ul {
 .welcome1-1 { grid-area: 1 / 1 / 2 / 2; }
 .welcome1-2 { grid-area: 1 / 2 / 2 / 3; }
 
-.webex {
-  margin: auto;
+.codeIcons {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 0.5rem;
+  justify-items: center;
 }
+
+.codeIcons > img {
+  height: 75px;
+  width: 75px;
+  padding: .5rem;
+  background-color: ghostwhite;
+  border-radius: 25px;
+}
+
+.webex {margin: auto;}
 
 h1{
   margin: 0px;
@@ -75,13 +103,6 @@ h2 {
   font-size: 1rem;
   font-family: 'Roboto Mono', monospace;
   color: #00FB96;
-}
-
-ul:hover > hr {
-  height: 0.1rem;
-  background-image: linear-gradient(to right, #4dd7c2, #00c9da, #00b7f4, #009fff, #0080ff, #406af7, #634fea, #8026d7, #6f21c9, #5f1dbb, #4e18ad, #3e139f);
-  margin: 0;
-  border: none;
 }
 
 hr{
@@ -98,3 +119,50 @@ hr{
   background-image: linear-gradient(to right, #4dd7c2, #00c9da, #00b7f4, #009fff, #0080ff, #406af7, #634fea, #8026d7, #6f21c9, #5f1dbb, #4e18ad, #3e139f);
   border-radius: 25px;
 }
+
+.section2 {background-color: #d4d8f0;}
+
+.webdev {
+  margin-top: 4rem;
+  margin-left: auto;
+  margin-right: auto;
+  height: 45rem;
+  width: 75%;
+  font-family: 'Montserrat', sans-serif;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 2fr 1fr;
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+}
+
+.section2-1 { grid-area: 1 / 1 / 2 / 3; }
+.section2-2 { grid-area: 2 / 1 / 3 / 3; }
+.section2-3 { grid-area: 3 / 1 / 4 / 3; }
+
+h3 {
+  font-size: 5rem;
+  color: #232946;
+  text-align: center;
+  margin-top: 2rem;
+}
+
+.yourWeb {
+  display: inline-flex;
+  align-items: center;
+  font-size: 2rem;
+  border-radius: 25px;
+  justify-content: center;
+}
+
+.greenBold{
+  color: #2FFFAD;
+  font-size: 3rem;
+  font-weight: 900;
+}
+
+.pinkLeft {margin-left: 1rem; color: #eebbc3; font-weight: 300;}
+
+.pink {color: #eebbc3;}
+
+.purple {color: #b8c1ec;}
